--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ li a:hover:not(.active) {
 
     position: relative;
     justify-content: center;
-    margin-top:50px;
+    margin-top:40px;
 
 }
 #schlange {
@@ -128,6 +128,8 @@ li a:hover:not(.active) {
     height: 60px;
     background-color: white;
     margin: 8px;
+    font-size: 50px;
+    text-align: center;
 }
 .top2px{
     margin-top: -2px;
@@ -145,7 +147,7 @@ li a:hover:not(.active) {
 .auswahl {
     display: flex;
     justify-content: center;
-    margin-top: 240px;
+    margin-top: 140px;
 }
 .auswahlzahl{
     border: black;
@@ -154,4 +156,31 @@ li a:hover:not(.active) {
     height: 60px;
     background-color: white;
     margin: 1px;
+    font-size: 50px;
+    text-align: center;
+}
+#buttonton{
+    background-color: #76b27c; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 25px;
+
+}
+#bild{
+    height: 300px;
+    width: 300px;
+    margin: 25px;
+}
+.botton{
+    margin-top: 150px;
+
+}
+#senk{
+    margin-left: 50px;
+    margin-top: 40px;
 }
