--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,18 @@ li a:hover:not(.active) {
     margin-left: 50px;
     margin-top: 40px;
 }
+.ziel{
+    border: black;
+    border-style: solid;
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    font-size: 50px;
+    text-align: center;
+    margin-right: 0px;
+}
+#level1{
+    height:8px;
+    height:12px;
+    background-color: antiquewhite;
+}
